--- a/.azuredevops/pipelines/cd-infrastructure-temporary-environments.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-temporary-environments.yaml
@@ -309,7 +309,7 @@ stages:
     steps:
       - template: .azuredevops/templates/steps/acr-import-retag.yaml@dtos-devops-templates
         parameters:
-          serviceConnection: sc-cohort-manager-dev
+          serviceConnection: $(SERVICE_CONNECTION)
 
   - job: update_database
     pool:
