fix: add missing event grid settings for local containers

--- a/.env.template
+++ b/.env.template
@@ -1,25 +1,35 @@
 # Environment variables for use in docker compose
 
 # Azure storage container settings
-AZURITE_CONNECTION_STRING="" # Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
+AZURITE_CONNECTION_STRING="AccountName=devstoreaccount1;AccountKey=YOUR_ACCOUNT_KEY;DefaultEndpointsProtocol=http;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;TableEndpoint=http://azurite:10002/devstoreaccount1;"
 AZURITE_CONTAINER_NAME="inbound" # Azure blob container name for valid files
 AZURITE_POISON_CONTAINER_NAME="inbound-poison" # Azure blob container name for invalid files
 
 # Azure Database settings
-DB_CONNECTION="" # Enter sql-database for mac, 127.0.0.1 for windows
-DB_NAME=ServiceInsightsDB # Database Name for the Azure SQL database
-PASSWORD="" # Enter a db password here with 8 chars, a num/ special character, and a capital letter
+DB_CONNECTION="sql-database" # sql-database for mac, 127.0.0.1 for windows
+DB_NAME=YOUR_DB_NAME # Database Name for the Azure SQL database
+PASSWORD="YOUR_DB_PASSWORD" # Enter a db password here with 8 chars, a num/ special character, and a capital letter
 
 # Mesh mailbox settings
-MESHPASSWORD="" # Password for the MESH Mailbox
-MESHSHAREDKEY="" # Shared Key for the MESH Mailbox
-MESHKEYNAME="" # Name of the key for authenticating against the MESH Mailbox
-MESHKEYPASSPHRASE="" # Passphrase for the private key for authenticating against the MESH Mailbox
-MESHAPIBASEURL=http://localhost:8700/messageexchange # Mesh mailbox URL host.docker.internal for mac and localhost for windows
-BSSMAILBOX=X26ABC1 # Mesh mailbox name
+MESHPASSWORD="YOUR_MESH_PASSWORD" # Password for the MESH Mailbox
+MESHSHAREDKEY="YOUR_SHARED_KEY" # Shared Key for the MESH Mailbox
+MESHKEYNAME="/YOUR_KEY_PFX" # Name of the key for authenticating against the MESH Mailbox
+MESHKEYPASSPHRASE="YOUR_KEY_PASSPHRASE" # Passphrase for the private key for authenticating against the MESH Mailbox
+MESHAPIBASEURL="YOUR_MESH_API_BASE_URL" # Mesh mailbox URL
+BSSMAILBOX="YOUR_BSS_MAILBOX" # Mesh mailbox name
 
 # Azure EventGrid settings
-EPISODE_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for Episodes
-EPISODE_TOPIC_KEY="" # Event Grid Topic Key for Episodes
-PARTICIPANT_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for Participants
-PARTICIPANT_TOPIC_KEY="" #  Event Grid Topic Key for Participants
+
+# Receive data endpoints for episode and participant
+EPISODE_TOPIC_ENDPOINT="YOUR_EPISODE_TOPIC_ENDPOINT" # Event Grid Topic Endpoint for Episodes
+EPISODE_TOPIC_KEY="YOUR_EPISODE_TOPIC_KEY" # Event Grid Topic Key for Episodes
+PARTICIPANT_TOPIC_ENDPOINT="YOUR_PARTICIPANT_TOPIC_ENDPOINT" # Event Grid Topic Endpoint for Participants
+PARTICIPANT_TOPIC_KEY="YOUR_PARTICIPANT_TOPIC_KEY" # Event Grid Topic Key for Participants
+
+# Create episode endpoint
+CREATE_EPISODE_TOPIC_ENDPOINT="YOUR_CREATE_EPISODE_TOPIC_ENDPOINT" # Event Grid Topic Endpoint for creating episodes
+CREATE_EPISODE_TOPIC_KEY="YOUR_CREATE_EPISODE_TOPIC_KEY" # Event Grid Topic Key for creating episodes
+
+# Update episode endpoint
+UPDATE_EPISODE_TOPIC_ENDPOINT="YOUR_UPDATE_EPISODE_TOPIC_ENDPOINT" # Event Grid Topic Endpoint for updating episodes
+UPDATE_EPISODE_TOPIC_KEY="YOUR_UPDATE_EPISODE_TOPIC_KEY" # Event Grid Topic Key for updating episodes
