--- a/compose.yaml
+++ b/compose.yaml
@@ -239,8 +239,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://*:6007
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-      - topicEndpoint1=${EPISODE_TOPIC_ENDPOINT}
-      - topicKey1=${EPISODE_TOPIC_KEY}
+      - topicEndpoint1=${CREATE_EPISODE_TOPIC_ENDPOINT}
+      - topicKey1=${CREATE_EPISODE_TOPIC_KEY}
       - CheckParticipantExistsUrl=http://get-participant:6061/api/GetParticipant
       - GetOrganisationIdByCodeUrl=http://get-organisation-data:6081/api/GetOrganisationIdByCode
 
@@ -291,8 +291,8 @@ services:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7777
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-      - topicEndpoint1=${EPISODE_TOPIC_ENDPOINT}
-      - topicKey1=${EPISODE_TOPIC_KEY}
+      - topicEndpoint1=${UPDATE_EPISODE_TOPIC_ENDPOINT}
+      - topicKey1=${UPDATE_EPISODE_TOPIC_KEY}
       - CheckParticipantExistsUrl=http://get-participant:6061/api/GetParticipant
       - GetOrganisationIdByCodeUrl=http://get-organisation-data:6081/api/GetOrganisationIdByCode
 
