fix: add missing event grid settings for local containers (#174)
* fix: add missing event grid settings for local containers

* fix: update template

--- a/.env.template
+++ b/.env.template
@@ -16,10 +16,20 @@ MESHSHAREDKEY="" # Shared Key for the MESH Mailbox
 MESHKEYNAME="" # Name of the key for authenticating against the MESH Mailbox
 MESHKEYPASSPHRASE="" # Passphrase for the private key for authenticating against the MESH Mailbox
 MESHAPIBASEURL=http://localhost:8700/messageexchange # Mesh mailbox URL host.docker.internal for mac and localhost for windows
-BSSMAILBOX=X26ABC1 # Mesh mailbox name
+BSSMAILBOX="" # Mesh mailbox name
 
 # Azure EventGrid settings
+
+# Receive data endpoints for episode and participant
 EPISODE_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for Episodes
 EPISODE_TOPIC_KEY="" # Event Grid Topic Key for Episodes
 PARTICIPANT_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for Participants
-PARTICIPANT_TOPIC_KEY="" #  Event Grid Topic Key for Participants
+PARTICIPANT_TOPIC_KEY="" # Event Grid Topic Key for Participants
+
+# Create episode endpoint
+CREATE_EPISODE_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for creating episodes
+CREATE_EPISODE_TOPIC_KEY="" # Event Grid Topic Key for creating episodes
+
+# Update episode endpoint
+UPDATE_EPISODE_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for updating episodes
+UPDATE_EPISODE_TOPIC_KEY="" # Event Grid Topic Key for updating episodes
