--- a/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
+++ b/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
@@ -10,8 +10,8 @@
     "topicEndpoint1": "EPISODE_TOPIC_ENDPOINT",
     "topicKey1": "EPISODE_TOPIC_KEY",
     "topicEndpoint2": "PARTICIPANT_TOPIC_ENDPOINT",
-    "topicKey2": "PARTICIPANT_TOPIC_KEY"
-  },
+    "topicKey2": "PARTICIPANT_TOPIC_KEY",
+    "FileNameRegexPattern": "^(?<prefix>bss)_(?<type>episodes|participants)(?:_(?<rows>\\d+)_row[s]?)?(?:_(?<date>\\d{8}))?(?:_(?<scope>current|historic))?\\.csv$"  },
   "Host": {
     "LocalHttpPort": 7072
   }
