feat: add config for azure container

--- a/.env.template
+++ b/.env.template
@@ -33,3 +33,6 @@ CREATE_EPISODE_TOPIC_KEY="" # Event Grid Topic Key for creating episodes
 # Update episode endpoint
 UPDATE_EPISODE_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for updating episodes
 UPDATE_EPISODE_TOPIC_KEY="" # Event Grid Topic Key for updating episodes
+
+# File name regex pattern
+FileNameRegexPattern="" # Regex pattern for file name validation
