--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -285,6 +285,7 @@ services:
       - topicKey1=${EPISODE_TOPIC_KEY}
       - topicEndpoint2=${PARTICIPANT_TOPIC_ENDPOINT}
       - topicKey2=${PARTICIPANT_TOPIC_KEY}
+      - FileNameRegexPattern=${FileNameRegexPattern}
 
   # Episode Management Service
   create-update-episode:
