--- a/.env.template
+++ b/.env.template
@@ -35,4 +35,4 @@ UPDATE_EPISODE_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for updating episod
 UPDATE_EPISODE_TOPIC_KEY="" # Event Grid Topic Key for updating episodes
 
 # File name regex pattern
-FileNameRegexPattern="" # Regex pattern for file name validation
+FileNameRegexPattern="^(?<prefix>bss)_(?<type>episodes|participants)(?:_(?<rows>\\d+)_row[s]?)?(?:_(?<date>\\d{8}))?(?:_(?<scope>current|historic))?\\.csv$"
