--- a/.env.template
+++ b/.env.template
@@ -35,4 +35,4 @@ UPDATE_EPISODE_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for updating episod
 UPDATE_EPISODE_TOPIC_KEY="" # Event Grid Topic Key for updating episodes
 
 # File name regex pattern
-FileNameRegexPattern="^(?<prefix>bss)_(?<type>episodes|subjects)(?:_(?<scope>current|latest|historic))?(?:_.+)?\\.csv$"
+FileNameRegexPattern="^(?<prefix>bss)_(?<type>episodes|subjects)(?:_(?<scope>latest|historic))?(?:_.+)?\\.csv$"
