--- a/.azuredevops/pipelines/cd-infrastructure-int-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-int-core.yaml
@@ -2,13 +2,8 @@
 
 name: $(Build.SourceBranchName)-$(Date:yyyyMMdd)_$(Rev:r)
 
-trigger:
-  branches:
-    include:
-      - main
-  paths:
-    include:
-      - infrastructure/*
+trigger: none
+pr: none
 
 pool:
   #vmImage: ubuntu-latest
