--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -168,7 +168,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6063
-      - GetProfilesUrl=http://127.0.0.1:6062/api/GetParticipantScreeningProfileData
+      - GetParticipantScreeningProfileDataUrl=http://127.0.0.1:6062/api/GetParticipantScreeningProfileData
 
   get-ps-episode:
     container_name: get-ps-episode
