--- a/src/BIAnalyticsManagementService/GetParticipantScreeningProfile/local.settings.json.template
+++ b/src/BIAnalyticsManagementService/GetParticipantScreeningProfile/local.settings.json.template
@@ -4,7 +4,7 @@
     "ASPNETCORE_ENVIRONMENT": "Development",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-    "GetProfilesUrl": "http://localhost:6062/api/GetParticipantScreeningProfileData"
+    "GetParticipantScreeningProfileDataUrl": "http://localhost:6062/api/GetParticipantScreeningProfileData"
   },
   "Host": {
     "LocalHttpPort": 6063
