--- a/.azuredevops/pipelines/cd-infrastructure-int-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-int-core.yaml
@@ -2,13 +2,8 @@
 
 name: $(Build.SourceBranchName)-$(Date:yyyyMMdd)_$(Rev:r)
 
-trigger:
-  branches:
-    include:
-      - main
-  paths:
-    include:
-      - infrastructure/*
+trigger: none
+pr: none
 
 pool:
   #vmImage: ubuntu-latest
@@ -19,7 +14,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: 82d77463eb20764a0d8c443322bd400bca978444
+      ref: 25bd848f622113e9cd573f12e4b5da2e8d32f8fc
       endpoint: NHSDigital
 
 variables:
