DTOSS-8065: manual rebase from main
DTOSS-8065: fix file format issues

DTOSS-8065: fix merge issues

DTOSS-8065: add appsettings file

DTOSS-8065: fix merge issues

DTOSS-8065: fix merge issues

DTOSS-8065: fix merge issues

DTOSS-8065: add subscription Id

DTOSS-8085: fix merge issues

DTOSS-8065: fix merge issues

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ appsettings.json
 .pem
 .pfx
 
+# But not ignore these files...
+!.gitignore
+!SmokeTests/dtos-service-insights-tests/Config/appsettings.json
