DTOSS-8065: Adding smoke tests for Release 0 (#186)
* DTOSS-8065: refactor and add database validations for participant tables

* DTOSS-8065: add api helper validation methods

* DTOSS-8065: add test files for smoke tests

* DTOSS-8065: add 6 smoke tests

* DTOSS-8065: update app settings and deployment yaml to execute tests in nft environment

* DTOSS-8065: parameterize subscription id

* DTOSS-8065: fix file format issue

* DTOSS-8065: fix file format issues

* DTOSS-8065: refactor unused code

* DTOSS-8065: set iscloudenv variable to true

* DTOSS-8065: enable commented test steps

* DTOSS-8085: use correct subscription id variable

* DTOSS-8085: use correct subscription id variable

* DTOSS-8085: fix nft execution issues

--- a/.azuredevops/pipelines/post-deployment-tests-nft.yaml
+++ b/.azuredevops/pipelines/post-deployment-tests-nft.yaml
@@ -40,8 +40,11 @@ stages:
       AppSettings.ConnectionStrings.ServiceInsightsDatabaseConnectionString: $(SERINS_DATABASE_CONNECTION_STRING)
       AppSettings.BlobStorageConnectionString: $(STORAGE_CONNECTION_STRING)
       AppSettings.ManagedIdentityClientId: $(MANAGED_IDENTITY_CLIENT_ID)
-      # Not needed for the moment (will go back in later)
-      #AppSettings.IsCloudEnvironment: $(Is_CloudEnvironment)
+      AppSettings.IsCloudEnvironment: $(Is_CloudEnvironment)
+      AppSettings.SubscriptionId: $(APIM_SUBSCRIPTION_KEY)
+      AppSettings.EndPoints.GetParticipantScreeningEpisodeUrl: $(GET_PARTICIPANT_SCREENING_EPISODE_URL)
+      AppSettings.EndPoints.GetParticipantScreeningProfileUrl: $(GET_PARTICIPANT_SCREENING_PROFILE_URL)
+
     steps:
     - template: .azuredevops/templates/steps/run-post-deployment-tests.yaml@dtos-devops-templates
       parameters:
