DTOSS-8480: add containerisation

--- a/.env.template
+++ b/.env.template
@@ -36,3 +36,8 @@ UPDATE_EPISODE_TOPIC_KEY="" # Event Grid Topic Key for updating episodes
 
 # File name regex pattern
 FileNameRegexPattern="^(?<prefix>bss)_(?<type>episodes|subjects)(?:_(?<scope>latest|historic))?(?:_.+)?\\.csv$"
+
+# Foundry API settings
+FOUNDRY_RESOURCE_ID="" # Enter the resource ID for the Foundry API
+FOUNDRY_API_URL="" # Enter the Foundry API URL
+FOUNDRY_API_TOKEN="" # Enter the Foundry API token
