--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -413,3 +413,20 @@ services:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6082
       - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
+foundry-relay-function:
+  container_name: foundry-relay-function
+  restart: always
+  build:
+    context: ./src/FoundryIntegrationService/FoundryRelayFunction
+    dockerfile: Dockerfile
+  networks:
+    - app-network
+  ports:
+    - "7071:7071"
+  environment:
+    - AzureWebJobsStorage=${AZURITE_CONNECTION_STRING}
+    - FUNCTIONS_WORKER_RUNTIME=python
+    - FOUNDRY_API_URL=${FOUNDRY_API_URL}
+    - FOUNDRY_API_TOKEN=${FOUNDRY_API_TOKEN}
+    - FOUNDRY_RESOURCE_ID=${FOUNDRY_RESOURCE_ID}
