--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ name: service-insights
 # Define network
 networks:
   app-network:
-    driver: bridge
+    driver: bridge # Change to 'host' for Windows
 
 # Define services
 services:
@@ -467,3 +467,20 @@ services:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6082
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
+  foundry-relay-function:
+    container_name: foundry-relay-function
+    restart: always
+    build:
+      context: ./src/FoundryIntegrationService
+      dockerfile: Dockerfile
+    networks:
+      - app-network
+    ports:
+      - "7071:7071"
+    environment:
+      - AzureWebJobsStorage=${AZURITE_CONNECTION_STRING}
+      - FUNCTIONS_WORKER_RUNTIME=python
+      - FOUNDRY_API_URL=${FOUNDRY_API_URL}
+      - FOUNDRY_API_TOKEN=${FOUNDRY_API_TOKEN}
+      - FOUNDRY_RESOURCE_ID=${FOUNDRY_RESOURCE_ID}
