--- a/src/FoundryIntegrationService/local.settings.json.template
+++ b/src/FoundryIntegrationService/local.settings.json.template
@@ -4,7 +4,7 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "AzureWebJobsServiceBus": "example",
     "FUNCTIONS_WORKER_RUNTIME": "python",
-    "FOUNDRY_DATASET_PATH":example",
+    "FOUNDRY_RESOURCE_ID":example",
     "FOUNDRY_API_URL": "example",
     "FOUNDRY_API_TOKEN": "example"
   }
